<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_layout_dp_133" >

        <RelativeLayout
            android:id="@+id/layout_icon"
            android:layout_width="@dimen/activity_layout_dp_187"
            android:layout_height="@dimen/activity_layout_dp_107"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/app_icon_bg"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/activity_layout_dp_85"
                android:layout_height="@dimen/activity_layout_dp_85"
                android:layout_centerInParent="true"
                android:background="@drawable/setting" />
        </RelativeLayout>

        <com.hiveview.clear.manager.widget.ScrollTextView
            android:id="@+id/name"
            android:layout_width="@dimen/activity_layout_dp_280"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_layout_dp_26"
            android:layout_toRightOf="@+id/layout_icon"
            android:text="@string/app_name"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:focusableInTouchMode="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_layout_sp_33" >
        </com.hiveview.clear.manager.widget.ScrollTextView>
	
	  <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_layout_dp_26"
            android:layout_below="@+id/name"
            android:layout_toRightOf="@+id/layout_icon">
            
            <TextView
            android:id="@+id/versionNamem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/version_name"
            android:textColor="@android:color/white"
	    	android:visibility="gone"
            android:textSize="@dimen/activity_layout_sp_20" />
        
             <com.hiveview.clear.manager.widget.ScrollTextView
            android:id="@+id/versionName"
            android:layout_width="@dimen/activity_layout_dp_200"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/versionNamem"
            android:text="@string/app"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
	    	android:visibility="gone"
            android:focusableInTouchMode="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_layout_sp_20" />
            
        </LinearLayout>

        <TextView
            android:id="@+id/app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_layout_dp_560"
            android:layout_marginTop="@dimen/activity_layout_dp_40"
            android:singleLine="true"
            android:text="@string/app"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_layout_sp_20" >
        </TextView>

		<TextView
            android:id="@+id/versionCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app"
            android:layout_marginLeft="@dimen/activity_layout_dp_560"
            android:singleLine="true"
	    	android:visibility="gone"
            android:text="@string/version_code"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_layout_sp_20" >
        </TextView>

        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app"
            android:layout_marginLeft="@dimen/activity_layout_dp_560"
            android:layout_marginTop="@dimen/activity_layout_dp_25"
            android:singleLine="true"
            android:text="@string/data"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_layout_sp_20" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/layout_button"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/clear"
                android:layout_width="@dimen/activity_layout_dp_195"
                android:layout_height="@dimen/activity_layout_dp_111"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_unselected"
                android:text="@string/clear"
                android:textColor="@color/manual_clear_button_unselected"
                android:textSize="@dimen/activity_layout_sp_26" />

            <Button
                android:id="@+id/uninstall"
                android:layout_width="@dimen/activity_layout_dp_195"
                android:layout_height="@dimen/activity_layout_dp_111"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_unselected"
                android:text="@string/uninstall"
                android:textColor="@color/manual_clear_button_unselected"
                android:textSize="@dimen/activity_layout_sp_26" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>